--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,10 +15,16 @@
         android:theme="@style/Theme.ChatAppC38GOnline"
         tools:targetApi="31">
         <activity
+            android:name=".home.HomeActivity"
+            android:exported="false"
+            android:label="@string/title_activity_home"
+            android:theme="@style/Theme.ChatAppC38GOnline" />
+        <activity
             android:name=".register.RegisterActivity"
             android:exported="false"
             android:label="@string/title_activity_register"
             android:theme="@style/Theme.ChatAppC38GOnline" />
+        <activity android:name=".login.LoginActivity" />
         <activity
             android:name=".splash.SplashActivity"
             android:exported="true"
