--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,11 @@
         android:theme="@style/Theme.ChatAppC38GOnline"
         tools:targetApi="31">
         <activity
+            android:name=".chat.ChatActivity"
+            android:exported="false"
+            android:label="@string/title_activity_chat"
+            android:theme="@style/Theme.ChatAppC38GOnline" />
+        <activity
             android:name=".addRoom.AddRoomActivity"
             android:exported="false"
             android:label="@string/title_activity_add_room"
